--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<ul>
 			<li><a href="index.html">Cashew slamwrap</a></li>
 			<li><a href="kikkererwten_wraps.html">kikkererwten wraps</a></li>
-			<li><a href="noedelsalade.html"></a>noedelsalade</li>
+			<li><a href="noedelsalade.html">noedelsalade</a></li>
 		</ul>
 		<img src="images/cashew-wrap.jpg" />
 		<ul>
